--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,141 @@ nav ul {
 }
 
 body {
-  margin: 0;
-  font-family: sans-serif;
+  font-family: "DM Mono", monospace;
+  color: white;
+  background-color: #110032;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+
+.passwordGenerator {
+  width: 33.5rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  
+}
+
+@media screen and (max-width: 768px) {
+  .passwordGenerator {
+    width: 20rem;
+  }
+  
+}
+.subheader-lable{
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 400;
+  display: block;
+  margin: 0px 0px 0px 0px;
+}
+
+.range-value{
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 400;
+}
+.lable-container{
+  display: flex;
+  justify-content: 10px;
+  flex-direction: flex-start;
+  align-items: center;
+
+}
+
+.range-value{
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 400;
+}
+
+.range-container{
+  width: auto;
+  padding: 20px 14px 20px 14px;
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+  background-color: #241442;
+}
+
+.range-input { /* sobre escribe el estilo del RANGE input */
+  accent-color: #7400e4;
+  height: 0.125rem;
+  width: 85%;
+}
+
+
+.button {
+  width: auto;
+  background-color: #7400e4;
+  color: white;
+  font-family: "DM Mono", monospace;
+  font-size: 1rem;
+  font-weight: 400;
+  border-radius: 0.5rem;
+  border: none;
+  padding: 20px 14px 20px 14px;
+  background-color: #a200d4;
+  background-image: linear-gradient(to right, #7944e7, #8300ab);
+}
+
+.button:hover {
+  transform: scale(.95); /* reduce un 5% HACERLO COMO DISABLE :DISABLE*/
+}
+
+input[type="text"] {
+  width: auto;
+  padding: 24px 0px 24px 0px;
+  font-size: 1.25rem;
+  font-family: inherit;
+  text-align: center;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: #241442;
+  color: #ffffffab;
+
+}
+@media screen and (max-width: 768px) {
+  input[type="text"] {
+    font-size: 0.9375rem;
+  }
+  
+}
+
+.input {
+  display: none;
+}
+
+.input:checked + .label{
+  background-color: #7944e7;
+}
+
+.label{ /*toggle*/
+  display: inline-block;
+  position: relative;
+  width: 75px;
+  height: 40px;
+  background-color: grey;
+  border-radius: 30px;
+
+}
+
+.label::before{ /*bolita del toggle*/
+  content: '';
+  position: absolute;
+  background-color: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  translate: 5px 5px;
+  transition: translate 0.2s;
+}
+
+.input:checked + .label::before{
+  translate: 40px 5px;
+
 }
